# aws-iot-core-for-amazon-sidewalk-sample-app

./: .gitignore  LICENSE  NOTICE  README.md  config.yaml  env_check.py  package-lock.json  requirements.txt
ApplicationServerDeployment/: README.md  config_grafana.yaml  delete_grafana.py  delete_stack.py  deploy_grafana.py  deploy_stack.py  readme.md
ApplicationServerDeployment/constants/: GrafanaConstants.py  SampleApplicationConstants.py
ApplicationServerDeployment/gui/: .env.production  .prettierignore  .prettierrc.json  README.MD  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ApplicationServerDeployment/iot_custom_build/: boto3-1.28.80-py3-none-any.whl  models-starfort-report.json
ApplicationServerDeployment/libs/: cloud_formation_client.py  cloufront_client.py  config.py  grafana.py  grafana_client.py  identity_store_client.py  iot_wireless_client.py  (+5 more)
EdgeDeviceBinaries/: versions.txt
EdgeDeviceProvisioning/: generate_prototype.py  provision_sidewalk_end_device.py
EdgeDeviceProvisioning/tools/provision/: .gitignore  DEVELOPERS.md  provision.py  pyproject.toml  readme.md  requirements.txt
EdgeDeviceProvisioning/tools/provision/config/ti/cc13x2_26x2/: config.yaml
EdgeDeviceProvisioning/tools/provision/script/: provision_silabs.sh  provision_silabs_aws.sh
EdgeDeviceProvisioning/tools/provision/sid_provision/: run.py
EdgeDeviceProvisioning/tools/provision/sid_provision/config/nordic/nrf528xx_dk/: config.yaml
EdgeDeviceProvisioning/tools/provision/sid_provision/config/ti/cc13x2_26x2/: config.yaml
(+190 files in other folders)
